--- a/src/essentials/styles/basic.scss
+++ b/src/essentials/styles/basic.scss
@@ -47,6 +47,10 @@ header {
 			margin-right: auto;
 		}
 
+		h1 a{
+			@include linkColor($color-yellow, $color-white);
+		}
+
 		.header-ndsu-logo{
 			display: block;
 		}
